deploy: 2b254fe79d67622027ab737ab3b3a63701e690aa

--- a/ja-blog/hello-world/index.html
+++ b/ja-blog/hello-world/index.html
@@ -1,4 +1,131 @@
-<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><style>:root{--accent-color:#FF4D4D}</style><title>Hello World</title><meta name=description content="MAKE THE WORLD FUN AGAIN"><meta name=keywords content="blog,diohabara,hugo,hello-world"><meta property="og:url" content="https://diohabara.github.io/ja-blog/hello-world/"><meta property="og:type" content="website"><meta property="og:title" content="Hello World"><meta property="og:description" content="MAKE THE WORLD FUN AGAIN"><meta property="og:image" content="/images/avatar.jpg"><meta name=twitter:card content="summary_large_image"><meta name=twitter:title content="Hello World"><meta name=twitter:description content="MAKE THE WORLD FUN AGAIN"><meta property="twitter:domain" content="https://diohabara.github.io/ja-blog/hello-world/"><meta property="twitter:url" content="https://diohabara.github.io/ja-blog/hello-world/"><meta name=twitter:image content="/images/avatar.jpg"><link rel=canonical href=https://diohabara.github.io/ja-blog/hello-world/><link rel=stylesheet type=text/css href=https://diohabara.github.io/css/normalize.min.css media=print onload='this.media="all"'><link rel=stylesheet type=text/css href=https://diohabara.github.io/css/main.css><link disabled id=dark-theme rel=stylesheet href=https://diohabara.github.io/css/dark.css><script src=https://diohabara.github.io/js/svg-injector.min.js></script>
+<!doctype html><html lang=en><head>
+<meta charset=utf-8>
+<meta name=viewport content="width=device-width,initial-scale=1">
+<style>:root{--accent-color:#FF4D4D}</style>
+<title>Hello World</title>
+<meta name=description content="MAKE THE WORLD FUN AGAIN">
+<meta name=keywords content="blog,diohabara,hugo,hello-world">
+<meta property="og:url" content="https://diohabara.github.io/ja-blog/hello-world/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Hello World">
+<meta property="og:description" content="MAKE THE WORLD FUN AGAIN">
+<meta property="og:image" content="/images/avatar.jpg">
+<meta name=twitter:card content="summary_large_image">
+<meta name=twitter:title content="Hello World">
+<meta name=twitter:description content="MAKE THE WORLD FUN AGAIN">
+<meta property="twitter:domain" content="https://diohabara.github.io/ja-blog/hello-world/">
+<meta property="twitter:url" content="https://diohabara.github.io/ja-blog/hello-world/">
+<meta name=twitter:image content="/images/avatar.jpg">
+<link rel=canonical href=https://diohabara.github.io/ja-blog/hello-world/>
+<link rel=stylesheet type=text/css href=https://diohabara.github.io/css/normalize.min.css media=print onload="this.media='all'">
+<link rel=stylesheet type=text/css href=https://diohabara.github.io/css/main.css>
+<link disabled id=dark-theme rel=stylesheet href=https://diohabara.github.io/css/dark.css>
+<script src=https://diohabara.github.io/js/svg-injector.min.js></script>
 <script src=https://diohabara.github.io/js/feather-icons.min.js></script>
-<script src=https://diohabara.github.io/js/main.js></script></head><body><script type=text/javascript>setThemeByUserPref()</script><header class=header><nav class=header-nav><div class=avatar><a href=https://diohabara.github.io><img src=https://diohabara.github.io/images/avatar.jpg alt=avatar></a></div><div class=nav-title><a class=nav-brand href=https://diohabara.github.io>barabara diary</a></div><div class=nav-links><div class=nav-link><a href=https://diohabara.github.io/ja-blog/><span data-feather=map-pin></span> ブログ</a></div><div class=nav-link><a href=https://diohabara.github.io/en-blog/><span data-feather=globe></span> blog</a></div><div class=nav-link><a href=https://diohabara.github.io/tags/>Tags</a></div><div class=nav-link><a href=https://github.com/diohabara/><span data-feather=github></span></a></div><div class=nav-link><a href=https://diohabara.github.io/index.xml><span data-feather=rss></span></a></div><span class=nav-icons-divider></span><div class="nav-link dark-theme-toggle"><a><span id=theme-toggle-icon data-feather=moon></span></a></div><div class=nav-link id=hamburger-menu-toggle><a><span data-feather=menu></span></a></div><ul class="nav-hamburger-list visibility-hidden"><li class=nav-item><a href=https://diohabara.github.io/ja-blog/><span data-feather=map-pin></span> ブログ</a></li><li class=nav-item><a href=https://diohabara.github.io/en-blog/><span data-feather=globe></span> blog</a></li><li class=nav-item><a href=https://diohabara.github.io/tags/>Tags</a></li><li class=nav-item><a href=https://github.com/diohabara/><span data-feather=github></span></a></li><li class=nav-item><a href=https://diohabara.github.io/index.xml><span data-feather=rss></span></a></li><li class="nav-item dark-theme-toggle"><a><span id=theme-toggle-icon data-feather=moon></span></a></li></ul></div></nav></header><main id=content><div class="post container"><div class=post-header-section><h1>Hello World</h1><small role=doc-subtitle></small><p class=post-date>May 7, 2022</p><ul class=post-tags><li class=post-tag><a href=https://diohabara.github.io/tags/hello-world>hello-world</a></li></ul></div><div class=post-content><p><ul><li><a href=#3%E8%A1%8C%E3%81%BE%E3%81%A8%E3%82%81>3行まとめ</a></li><li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li><li><a href=#%E5%8F%82%E7%85%A7>参照</a></li></ul><h2 id=3行まとめ>3行まとめ</h2><ul><li>ブログを作った</li><li>Hugoとgokarnaを使った</li><li>これはテンプレート</li></ul><h2 id=謝辞>謝辞</h2><p><a href=https://github.com/526avijitgupta/gokarna>gokarna</a>の作者の人ありがとうございます。</p><h2 id=参照>参照</h2><ul><li><a href=https://github.com/526avijitgupta/gokarna>https://github.com/526avijitgupta/gokarna</a></li></ul></p></div></div></main><footer class=footer><span>&copy; 2022</span>
-<span>Made with &#10084;&#65039; using <a target=_blank href=https://github.com/526avijitgupta/gokarna>Gokarna</a></span></footer></body></html>
+<script src=https://diohabara.github.io/js/main.js></script>
+</head>
+<body>
+<script type=text/javascript>setThemeByUserPref()</script><header class=header>
+<nav class=header-nav>
+<div class=avatar>
+<a href=https://diohabara.github.io>
+<img src=https://diohabara.github.io/images/avatar.jpg alt=avatar>
+</a>
+</div>
+<div class=nav-title>
+<a class=nav-brand href=https://diohabara.github.io>barabara diary</a>
+</div>
+<div class=nav-links>
+<div class=nav-link>
+<a href=https://diohabara.github.io/ja-blog/><span data-feather=map-pin></span> ブログ </a>
+</div>
+<div class=nav-link>
+<a href=https://diohabara.github.io/en-blog/><span data-feather=globe></span> blog </a>
+</div>
+<div class=nav-link>
+<a href=https://diohabara.github.io/tags/> Tags </a>
+</div>
+<div class=nav-link>
+<a href=https://github.com/diohabara/><span data-feather=github></span> </a>
+</div>
+<div class=nav-link>
+<a href=https://diohabara.github.io/index.xml><span data-feather=rss></span> </a>
+</div>
+<span class=nav-icons-divider></span>
+<div class="nav-link dark-theme-toggle">
+<a>
+<span id=theme-toggle-icon data-feather=moon></span>
+</a>
+</div>
+<div class=nav-link id=hamburger-menu-toggle>
+<a>
+<span data-feather=menu></span>
+</a>
+</div>
+<ul class="nav-hamburger-list visibility-hidden">
+<li class=nav-item>
+<a href=https://diohabara.github.io/ja-blog/><span data-feather=map-pin></span> ブログ </a>
+</li>
+<li class=nav-item>
+<a href=https://diohabara.github.io/en-blog/><span data-feather=globe></span> blog </a>
+</li>
+<li class=nav-item>
+<a href=https://diohabara.github.io/tags/> Tags </a>
+</li>
+<li class=nav-item>
+<a href=https://github.com/diohabara/><span data-feather=github></span> </a>
+</li>
+<li class=nav-item>
+<a href=https://diohabara.github.io/index.xml><span data-feather=rss></span> </a>
+</li>
+<li class="nav-item dark-theme-toggle">
+<a>
+<span id=theme-toggle-icon data-feather=moon></span>
+</a>
+</li>
+</ul>
+</div>
+</nav>
+</header>
+<main id=content>
+<div class="post container">
+<div class=post-header-section>
+<h1>Hello World</h1>
+<small role=doc-subtitle></small>
+<p class=post-date>
+May 7, 2022
+</p>
+<ul class=post-tags>
+<li class=post-tag><a href=https://diohabara.github.io/tags/hello-world>hello-world</a></li>
+</ul>
+</div>
+<div class=post-content>
+<p>
+<ul>
+<li><a href=#3%E8%A1%8C%E3%81%BE%E3%81%A8%E3%82%81>3行まとめ</a></li>
+<li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li>
+<li><a href=#%E5%8F%82%E7%85%A7>参照</a></li>
+</ul>
+<h2 id=3行まとめ>3行まとめ</h2>
+<ul>
+<li>ブログを作った</li>
+<li>Hugoとgokarnaを使った</li>
+<li>これはテンプレート</li>
+</ul>
+<h2 id=謝辞>謝辞</h2>
+<p><a href=https://github.com/526avijitgupta/gokarna>gokarna</a>の作者の人ありがとうございます。</p>
+<h2 id=参照>参照</h2>
+<ul>
+<li><a href=https://github.com/526avijitgupta/gokarna>https://github.com/526avijitgupta/gokarna</a></li>
+</ul>
+</p>
+</div>
+</div>
+</main><footer class=footer>
+<span>&copy; 2022 </span>
+<span>
+Made with &#10084;&#65039; using <a target=_blank href=https://github.com/526avijitgupta/gokarna>Gokarna</a>
+</span>
+</footer>
+</body>
+</html>
