deploy: f9d3fe891a2742fcc7dc549a1e6c085b96e6151a

--- a/ja-blog/index.html
+++ b/ja-blog/index.html
@@ -91,7 +91,7 @@
 <div class="container list-posts">
 <h1 class=list-title>Ja-blogs</h2>
 <h2 class=posts-year>2022</h2><article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/hello-world/ class=post-link>Hello World</a>
+<a href=https://diohabara.github.io/ja-blog/hello-world/ class=post-link>はろーわーるど</a>
 <div class=flex-break></div>
 <span class=post-date>May 7, 2022</span>
 </article>
