--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/hello-world/ class=post-link>Hello World</a>
+<a href=https://diohabara.github.io/ja-blog/hello-world/ class=post-link>はろーわーるど</a>
 <div class=flex-break></div>
 <span class=post-date>May 7, 2022</span>
 </article>
