--- a/ja-blog/hello-world/index.html
+++ b/ja-blog/hello-world/index.html
@@ -2,16 +2,16 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <style>:root{--accent-color:#FF4D4D}</style>
-<title>Hello World</title>
+<title>はろーわーるど</title>
 <meta name=description content="MAKE THE WORLD FUN AGAIN">
-<meta name=keywords content="blog,diohabara,hugo,hello-world">
+<meta name=keywords content="blog,diohabara,hugo,はろーわーるど">
 <meta property="og:url" content="https://diohabara.github.io/ja-blog/hello-world/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Hello World">
+<meta property="og:title" content="はろーわーるど">
 <meta property="og:description" content="MAKE THE WORLD FUN AGAIN">
 <meta property="og:image" content="/images/avatar.jpg">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:title content="Hello World">
+<meta name=twitter:title content="はろーわーるど">
 <meta name=twitter:description content="MAKE THE WORLD FUN AGAIN">
 <meta property="twitter:domain" content="https://diohabara.github.io/ja-blog/hello-world/">
 <meta property="twitter:url" content="https://diohabara.github.io/ja-blog/hello-world/">
@@ -90,13 +90,13 @@
 <main id=content>
 <div class="post container">
 <div class=post-header-section>
-<h1>Hello World</h1>
+<h1>はろーわーるど</h1>
 <small role=doc-subtitle></small>
 <p class=post-date>
 May 7, 2022
 </p>
 <ul class=post-tags>
-<li class=post-tag><a href=https://diohabara.github.io/tags/hello-world>hello-world</a></li>
+<li class=post-tag><a href=https://diohabara.github.io/tags/%E3%81%AF%E3%82%8D%E3%83%BC%E3%82%8F%E3%83%BC%E3%82%8B%E3%81%A9>はろーわーるど</a></li>
 </ul>
 </div>
 <div class=post-content>
@@ -106,6 +106,7 @@ May 7, 2022
 <li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li>
 <li><a href=#%E5%8F%82%E7%85%A7>参照</a></li>
 </ul>
+<p><img src=/images/avatar.jpg alt=pikachu></p>
 <h2 id=3行まとめ>3行まとめ</h2>
 <ul>
 <li>ブログを作った</li>
