deploy: 96c1761f93dfe7af76c5c236a3e307be87d8603b

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/ja-blog/lonely-content/ class=post-link>強い孤独感と充実感</a>
+<div class=flex-break></div>
+<span class=post-date>June 17, 2022</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/review-tech-to-support-processors/ class=post-link>｢プロセッサを支える技術｣を読んだ</a>
 <div class=flex-break></div>
 <span class=post-date>May 17, 2022</span>
