--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/ja-blog/jpn-history-textbook/ class=post-link>｢詳説日本史｣を読んだ</a>
+<div class=flex-break></div>
+<span class=post-date>June 27, 2022</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/lonely-content/ class=post-link>強い孤独感と充実感</a>
 <div class=flex-break></div>
 <span class=post-date>June 17, 2022</span>
@@ -111,11 +116,6 @@
 </article>
 <article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/hello-world/ class=post-link>はろーわーるど</a>
-<div class=flex-break></div>
-<span class=post-date>May 7, 2022</span>
-</article>
-<article class=post-title>
-<a href=https://diohabara.github.io/en-blog/hello-world/ class=post-link>Hello World</a>
 <div class=flex-break></div>
 <span class=post-date>May 7, 2022</span>
 </article>
