--- a/index.html
+++ b/index.html
@@ -126,5 +126,23 @@
 Made with &#10084;&#65039; using <a target=_blank href=https://github.com/526avijitgupta/gokarna>Gokarna</a>
 </span>
 </footer>
+<link rel=stylesheet href=https://use.fontawesome.com/releases/v5.0.6/css/all.css>
+<link rel=stylesheet href=/css/custom.css>
+<section class="section sns_parent">
+<div class="container sns_section">
+<div class="sns_button twitter">
+<a href="http://twitter.com/intent/tweet?url=https%3a%2f%2fdiohabara.github.io%2f&text=barabara%20diary" target=_blank title=Tweet><i class="fab fa-twitter"></i></a>
+</div>
+<div class="sns_button hatena">
+<a href="http://b.hatena.ne.jp/add?mode=confirm&url=https%3a%2f%2fdiohabara.github.io%2f&title=barabara%20diary" target=_blank title=hatena><i class="fa fa-hatena"></i></i></a>
+</div>
+<div class="sns_button facebook">
+<a href="http://www.facebook.com/sharer.php?u=https%3a%2f%2fdiohabara.github.io%2f&t=barabara%20diary" target=_blank title=Facebook><i class="fab fa-facebook"></i></a>
+</div>
+<div class="sns_button pocket">
+<a href="http://getpocket.com/edit?url=https%3a%2f%2fdiohabara.github.io%2f&title=barabara%20diary" target=_blank title=pocket><i class="fab fa-get-pocket"></i></a>
+</div>
+</div>
+</section>
 </body>
 </html>
