--- a/ja-blog/review-tech-to-support-processors/index.html
+++ b/ja-blog/review-tech-to-support-processors/index.html
@@ -132,5 +132,23 @@ May 17, 2022
 Made with &#10084;&#65039; using <a target=_blank href=https://github.com/526avijitgupta/gokarna>Gokarna</a>
 </span>
 </footer>
+<link rel=stylesheet href=https://use.fontawesome.com/releases/v5.0.6/css/all.css>
+<link rel=stylesheet href=/css/custom.css>
+<section class="section sns_parent">
+<div class="container sns_section">
+<div class="sns_button twitter">
+<a href="http://twitter.com/intent/tweet?url=https%3a%2f%2fdiohabara.github.io%2fja-blog%2freview-tech-to-support-processors%2f&text=%ef%bd%a2%e3%83%97%e3%83%ad%e3%82%bb%e3%83%83%e3%82%b5%e3%82%92%e6%94%af%e3%81%88%e3%82%8b%e6%8a%80%e8%a1%93%ef%bd%a3%e3%82%92%e8%aa%ad%e3%82%93%e3%81%a0" target=_blank title=Tweet><i class="fab fa-twitter"></i></a>
+</div>
+<div class="sns_button hatena">
+<a href="http://b.hatena.ne.jp/add?mode=confirm&url=https%3a%2f%2fdiohabara.github.io%2fja-blog%2freview-tech-to-support-processors%2f&title=%ef%bd%a2%e3%83%97%e3%83%ad%e3%82%bb%e3%83%83%e3%82%b5%e3%82%92%e6%94%af%e3%81%88%e3%82%8b%e6%8a%80%e8%a1%93%ef%bd%a3%e3%82%92%e8%aa%ad%e3%82%93%e3%81%a0" target=_blank title=hatena><i class="fa fa-hatena"></i></i></a>
+</div>
+<div class="sns_button facebook">
+<a href="http://www.facebook.com/sharer.php?u=https%3a%2f%2fdiohabara.github.io%2fja-blog%2freview-tech-to-support-processors%2f&t=%ef%bd%a2%e3%83%97%e3%83%ad%e3%82%bb%e3%83%83%e3%82%b5%e3%82%92%e6%94%af%e3%81%88%e3%82%8b%e6%8a%80%e8%a1%93%ef%bd%a3%e3%82%92%e8%aa%ad%e3%82%93%e3%81%a0" target=_blank title=Facebook><i class="fab fa-facebook"></i></a>
+</div>
+<div class="sns_button pocket">
+<a href="http://getpocket.com/edit?url=https%3a%2f%2fdiohabara.github.io%2fja-blog%2freview-tech-to-support-processors%2f&title=%ef%bd%a2%e3%83%97%e3%83%ad%e3%82%bb%e3%83%83%e3%82%b5%e3%82%92%e6%94%af%e3%81%88%e3%82%8b%e6%8a%80%e8%a1%93%ef%bd%a3%e3%82%92%e8%aa%ad%e3%82%93%e3%81%a0" target=_blank title=pocket><i class="fab fa-get-pocket"></i></a>
+</div>
+</div>
+</section>
 </body>
 </html>
