deploy: 18151a2447905b2ae44242c988887ce09d4ba352

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/ja-blog/c-compiler/ class=post-link>CでCコンパイラを書いた</a>
+<div class=flex-break></div>
+<span class=post-date>July 19, 2022</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/jpn-history-textbook/ class=post-link>｢詳説日本史｣を読んだ</a>
 <div class=flex-break></div>
 <span class=post-date>June 27, 2022</span>
@@ -113,11 +118,6 @@
 <a href=https://diohabara.github.io/ja-blog/review-tech-to-support-processors/ class=post-link>｢プロセッサを支える技術｣を読んだ</a>
 <div class=flex-break></div>
 <span class=post-date>May 17, 2022</span>
-</article>
-<article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/hello-world/ class=post-link>はろーわーるど</a>
-<div class=flex-break></div>
-<span class=post-date>May 7, 2022</span>
 </article>
 </div>
 </main><footer class=footer>
