--- a/ja-blog/index.html
+++ b/ja-blog/index.html
@@ -91,6 +91,11 @@
 <div class="container list-posts">
 <h1 class=list-title>Ja-blogs</h2>
 <h2 class=posts-year>2022</h2><article class=post-title>
+<a href=https://diohabara.github.io/ja-blog/c-compiler/ class=post-link>CでCコンパイラを書いた</a>
+<div class=flex-break></div>
+<span class=post-date>July 19, 2022</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/jpn-history-textbook/ class=post-link>｢詳説日本史｣を読んだ</a>
 <div class=flex-break></div>
 <span class=post-date>June 27, 2022</span>
