--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/ja-blog/quit-hatena-part-time/ class=post-link>はてな退職エントリー(バイト)</a>
+<div class=flex-break></div>
+<span class=post-date>July 19, 2022</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/c-compiler/ class=post-link>CでCコンパイラを書いた</a>
 <div class=flex-break></div>
 <span class=post-date>July 19, 2022</span>
@@ -113,11 +118,6 @@
 <a href=https://diohabara.github.io/ja-blog/lonely-content/ class=post-link>強い孤独感と充実感</a>
 <div class=flex-break></div>
 <span class=post-date>June 17, 2022</span>
-</article>
-<article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/review-tech-to-support-processors/ class=post-link>｢プロセッサを支える技術｣を読んだ</a>
-<div class=flex-break></div>
-<span class=post-date>May 17, 2022</span>
 </article>
 </div>
 </main><footer class=footer>
