--- a/ja-blog/quit-hatena-part-time/index.html
+++ b/ja-blog/quit-hatena-part-time/index.html
@@ -160,16 +160,17 @@ July 19, 2022
 <h3 id=バイト業務委託の受け入れ体制に改善点があった1つ減点>バイト･業務委託の受け入れ体制に改善点があった(☆1つ減点)</h3>
 <p><code>AWS IAM</code>でバイト相当の権限がなく、AWS上で作業ができずアルバイトだと一部の仕事ができず社員の方に頼む必要がありました。他のチームがどうかはわかりません。
 ｢バイトや業務委託用の権限を作った方が良いのでは？｣と思い、社員の方に相談しましたが元々バイトや業務委託はあまりおらず、いても必要になる場面がなかった(仕事を振らなかった)ので管理をしていないようです。</p>
-<p>今回の自分のタスクだと必要だっただけで仕事一般に必要にはなりませんが、この他にも入社時に多少とバタついた覚えがあるので<strong>伸びしろがある</strong>と思いました。</p>
-<p>ただ、ここに時間･お金をかけるかどうかは経営判断な気もするので何が正しいのかはわかりません。あくまでバイトとして働きにくい部分もあったというだけです。企業には正社員でも多かれ少なかれこのような権限の問題はあるとも理解しています。</p>
+<p>今回の自分のタスクだと必要だっただけで仕事一般に必要にはなりませんが、この他にも入社時に多少バタついた覚えがあるので<strong>伸びしろがある</strong>と思いました。</p>
+<p>ただ、ここに時間･お金をかけるかどうかは経営上仕方のない判断な気もするので何が正しいのかはわかりません。あくまでバイトとして働きにくい部分もあったというだけです。企業には正社員でも多かれ少なかれこのような権限の問題はあると理解しています。</p>
 <h3 id=アルバイト以外の身分で働きたいと思った発生せず>アルバイト以外の身分で働きたいと思った(☆発生せず)</h3>
 <p>この問題は会社の問題ではないので☆は発生しません。</p>
-<p>例えば、フルタイムのインターンの場合は｢次回のリリースに合わせた新機能の追加｣というタスクを振り、しっかりとメンタリングしながら仕事をすることが可能です。しかし、アルバイトだと時間が細切れだったり、週に10数時間しか入れないのでどこの会社もCI/CDなどの｢今も動いているけど将来的には書き換えたい｣ことをやらせる印象があります。もしくは｢今は動いていないけど将来的に導入しようか迷っている｣こと。</p>
+<p>例えば、フルタイムのインターンの場合は｢次回のリリースに合わせた新機能の追加｣というタスクを振り、しっかりとメンタリングしながら仕事をすることが可能です。しかし、アルバイトだと稼働できる時間が細切れだったり、週に10数時間しか入れないのでどこの会社もCI/CDなどの｢今も動いているけど将来的には書き換えたい｣仕事をやらせる印象があります。もしくは｢今は動いていないけど将来的に導入しようか迷っている｣こと。</p>
 <p>僕ならそうするかなと思っているだけで実際にそうだったのかはわかりません。</p>
 <h3 id=時給が安い1つ減点>時給が安い(☆1つ減点)</h3>
-<p>ソフトウェアエンジニアのバイトにしては時給が安いです。特に試用期間の時給のまま終わったのでほぼ東京の最低賃金くらいの金額(1050円/時)で働いていました。</p>
+<p>ソフトウェアエンジニアのバイトにしては時給が低いです。特に試用期間の時給のまま終わった(試用期間であろうがなかろうが安いですが)のでほぼ東京の最低賃金くらいの金額(1050円/時)で働いていました。試用期間が過ぎると1200円/時です。</p>
 <p>僕はその分気楽に働けましたが、高時給なアルバイトをしたい人は他を当たったほうが良いです。特に最近はアルバイト/インターンでも時給2500円くらいがIT大手だと一般的になっています。気になった人は以下のリンク(いわゆる魔法のスプレッドシート)をご覧ください。</p>
 <p><a href=https://docs.google.com/spreadsheets/d/e/2PACX-1vSDSvWQNtJMW5IUsLF6FP12PNt8nSqaqw554UiNnUEYAZlWSp7PU509-M2IJ96D72gpCJznDvyied57/pubhtml>ITエンジニアインターン</a></p>
+<p>専門的な仕事だと思うので、有名な企業の時給が低いというのは夢がありません。是非とも利益を上げていただいて時給を上げてほしいです。</p>
 <h2 id=謝辞>謝辞</h2>
 <p>仕事をしていたのは5月までの短い期間でしたが、勉強になることがたくさんありました。社員の方はありがとうございました。</p>
 <h2 id=参照>参照</h2>
