deploy: ec9db30895da87d8bb489710fce144d89c03a0c6

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/ja-blog/intern-at-indeed-japan/ class=post-link>Indeed Japanでインターンしてきた</a>
+<div class=flex-break></div>
+<span class=post-date>August 22, 2022</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/quit-hatena-part-time/ class=post-link>はてな退職エントリー(バイト)</a>
 <div class=flex-break></div>
 <span class=post-date>July 19, 2022</span>
@@ -113,11 +118,6 @@
 <a href=https://diohabara.github.io/ja-blog/jpn-history-textbook/ class=post-link>｢詳説日本史｣を読んだ</a>
 <div class=flex-break></div>
 <span class=post-date>June 27, 2022</span>
-</article>
-<article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/lonely-content/ class=post-link>強い孤独感と充実感</a>
-<div class=flex-break></div>
-<span class=post-date>June 17, 2022</span>
 </article>
 </div>
 </main><footer class=footer>
