deploy: 85903ffcf9e2bea250f50b6b624a38864b2f3a25

--- a/ja-blog/c-compiler/index.html
+++ b/ja-blog/c-compiler/index.html
@@ -111,28 +111,23 @@ July 19, 2022
 <li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li>
 <li><a href=#%E5%8F%82%E7%85%A7>参照</a></li>
 </ul>
-<p><img src=/images/The_C_Programming_Language_logo.svg alt=c></p>
-<h2 id=3-行まとめ>3 行まとめ</h2>
-<ul>
+<p>
+<img src=/images/The_C_Programming_Language_logo.svg alt=c>
+</p>
+<h2 id=3-行まとめ>3 行まとめ <a href=#3-%e8%a1%8c%e3%81%be%e3%81%a8%e3%82%81>#</a></h2><ul>
 <li>C で C コンパイラを書いた</li>
 <li>大学で一応コンパイラを書いたが理解していなかったので確認のため</li>
 <li>次は別のアセンブリ、言語で書きたい</li>
 </ul>
-<h2 id=何をした>何をした？</h2>
-<p><a href=https://www.sigbus.info/compilerbook>Rui Ueyama 氏の書いたコンパイラに関する記事</a>と<a href=https://github.com/rui314/chibicc/>関連レポジトリ</a>を元に<a href=https://github.com/diohabara/ccc>C コンパイラ</a>を書いた。正確には参照用のブランチを見て写経をした。途中までは要件から自分で書いていたのだが、途中バグって数日を無駄にしたので学習目的と割り切って写経に切り替えた。</p>
-<h2 id=なぜやった>なぜやった？</h2>
-<p>コンパイラを書いたことがなかったから。コンパイラとは一般に「字句解析 → 構文解析 → 意味解析 → コード生成」するソフトだろう。自分は今までコード生成、つまりアセンブリのコードを出力するところをやったことがなかった。</p>
+<h2 id=何をした>何をした？ <a href=#%e4%bd%95%e3%82%92%e3%81%97%e3%81%9f>#</a></h2><p><a href=https://www.sigbus.info/compilerbook>Rui Ueyama 氏の書いたコンパイラに関する記事</a>と<a href=https://github.com/rui314/chibicc/>関連レポジトリ</a>を元に<a href=https://github.com/diohabara/ccc>C コンパイラ</a>を書いた。正確には参照用のブランチを見て写経をした。途中までは要件から自分で書いていたのだが、途中バグって数日を無駄にしたので学習目的と割り切って写経に切り替えた。</p>
+<h2 id=なぜやった>なぜやった？ <a href=#%e3%81%aa%e3%81%9c%e3%82%84%e3%81%a3%e3%81%9f>#</a></h2><p>コンパイラを書いたことがなかったから。コンパイラとは一般に「字句解析 → 構文解析 → 意味解析 → コード生成」するソフトだろう。自分は今までコード生成、つまりアセンブリのコードを出力するところをやったことがなかった。</p>
 <p>一応大学の講義でやった&mldr;ということになっているのだが、よくわからず適当に動かしていたらテストケースが通っていたという感じである。だから理解をしながらやったのは今回が初めてとなる。</p>
-<h2 id=得たもの>得たもの</h2>
-<p>C で C のコンパイラを書くという内容だったが、C で C のコンパイラが書くことも分解すれば単純なことの繰り返しだということがわかってよかった。しかし、Rui Ueyama 氏の参考コードを読むと単純なことなのに実装するまで気付かない解決策が多い。ここらへんはやはり自分で何度も手を動かしたり、他人のコードを盗むしかないのだと思う。</p>
+<h2 id=得たもの>得たもの <a href=#%e5%be%97%e3%81%9f%e3%82%82%e3%81%ae>#</a></h2><p>C で C のコンパイラを書くという内容だったが、C で C のコンパイラが書くことも分解すれば単純なことの繰り返しだということがわかってよかった。しかし、Rui Ueyama 氏の参考コードを読むと単純なことなのに実装するまで気付かない解決策が多い。ここらへんはやはり自分で何度も手を動かしたり、他人のコードを盗むしかないのだと思う。</p>
 <p>インターンが中心になるとコードを書く行数が減るので意識してコードを書こうと思った。</p>
-<h2 id=次にやりたいこと>次にやりたいこと</h2>
-<p>次はアセンブリ(Arm、RISC-V)について勉強をするか、Rust について勉強をして Rust でコンパイラを書いてみたいと思った。</p>
+<h2 id=次にやりたいこと>次にやりたいこと <a href=#%e6%ac%a1%e3%81%ab%e3%82%84%e3%82%8a%e3%81%9f%e3%81%84%e3%81%93%e3%81%a8>#</a></h2><p>次はアセンブリ(Arm、RISC-V)について勉強をするか、Rust について勉強をして Rust でコンパイラを書いてみたいと思った。</p>
 <p>前者に関しては、この記事だと x86-64 が使われていたのですが別のアセンブリも触ってみたいから。後者に関しては、C ではなくて現代的機能を持ったシステムプログラミング言語を触ってみたいから。</p>
-<h2 id=謝辞>謝辞</h2>
-<p>このような記事を書いてくれた Rui Ueyama 氏に感謝。</p>
-<h2 id=参照>参照</h2>
-<ul>
+<h2 id=謝辞>謝辞 <a href=#%e8%ac%9d%e8%be%9e>#</a></h2><p>このような記事を書いてくれた Rui Ueyama 氏に感謝。</p>
+<h2 id=参照>参照 <a href=#%e5%8f%82%e7%85%a7>#</a></h2><ul>
 <li><a href=https://www.sigbus.info/compilerbook>https://www.sigbus.info/compilerbook</a></li>
 <li><a href=https://github.com/rui314/chibicc/commits/reference>https://github.com/rui314/chibicc/commits/reference</a></li>
 </ul>
