--- a/ja-blog/hello-world/index.html
+++ b/ja-blog/hello-world/index.html
@@ -106,17 +106,16 @@ May 7, 2022
 <li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li>
 <li><a href=#%E5%8F%82%E7%85%A7>参照</a></li>
 </ul>
-<p><img src=/images/avatar.jpg alt=pikachu></p>
-<h2 id=3行まとめ>3行まとめ</h2>
-<ul>
+<p>
+<img src=/images/avatar.jpg alt=pikachu>
+</p>
+<h2 id=3行まとめ>3行まとめ <a href=#3%e8%a1%8c%e3%81%be%e3%81%a8%e3%82%81>#</a></h2><ul>
 <li>ブログを作った</li>
 <li>Hugoとgokarnaを使った</li>
 <li>これはテンプレート</li>
 </ul>
-<h2 id=謝辞>謝辞</h2>
-<p><a href=https://github.com/526avijitgupta/gokarna>gokarna</a>の作者の人ありがとうございます。</p>
-<h2 id=参照>参照</h2>
-<ul>
+<h2 id=謝辞>謝辞 <a href=#%e8%ac%9d%e8%be%9e>#</a></h2><p><a href=https://github.com/526avijitgupta/gokarna>gokarna</a>の作者の人ありがとうございます。</p>
+<h2 id=参照>参照 <a href=#%e5%8f%82%e7%85%a7>#</a></h2><ul>
 <li><a href=https://github.com/526avijitgupta/gokarna>https://github.com/526avijitgupta/gokarna</a></li>
 </ul>
 </p>
