--- a/ja-blog/jpn-history-textbook/index.html
+++ b/ja-blog/jpn-history-textbook/index.html
@@ -109,31 +109,26 @@ June 27, 2022
 <li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li>
 <li><a href=#%E5%8F%82%E7%85%A7>参照</a></li>
 </ul>
-<h2 id=3行まとめ>3行まとめ</h2>
-<ul>
+<h2 id=3行まとめ>3行まとめ <a href=#3%e8%a1%8c%e3%81%be%e3%81%a8%e3%82%81>#</a></h2><ul>
 <li>日本の歴史は土地政策の歴史</li>
 <li>武士の登場からの怒涛の展開が面白い</li>
 <li>ページ数の関係からか説明が端折られている部分も多い</li>
 </ul>
-<h2 id=感想>感想</h2>
-<p>面白かった。読む前は日本史の流れがわかっているのか不安だったが、今は教科書を読み整理された。</p>
+<h2 id=感想>感想 <a href=#%e6%84%9f%e6%83%b3>#</a></h2><p>面白かった。読む前は日本史の流れがわかっているのか不安だったが、今は教科書を読み整理された。</p>
 <p>しかし、なぜ今、日本史の教科書を？</p>
 <p>日本史は必修で小学校から高校まで学んだということになっている。しかし、中高では教員の興味のある年代にやたら長く時間(高校では1学期を使って九州･朝鮮半島に広がる古墳について学んだ覚えがある)が割かれ、全体の流れは中学受験のときに勉強したレベルで終わっていた。しかし、これから留学するということもあり、日本の概要をもう一度学びたいと思い読んだ。</p>
 <p>｢詳説日本史｣で描かれた日本の歴史は土地に関する歴史だった。世界史だと遊牧民族と農耕民族のような対比があるのだが、日本は海で囲まれており体外的な圧力が弱かった。逆に外部から土地を得ることもできないので、限られた土地を巡った水面下の駆け引きが面白かった。</p>
 <p>朝廷や貴族が土地支配力強化のために地方の豪族の力を借りたところ、徐々に豪族が武士となり力が移っていくのは力こそ正義ということをわからされる。そして、平氏政権という武士による政権が登場すると物語の主役は武士になり、江戸幕府まで武士の時代が続くことになる。けれども朝廷はずっと存在するという二面性みたいなものが興味深い。</p>
 <p>ただ、ページ数の関係からか太字になっているが説明が十分でなくわかりにくい記述も多かった。全国の学生に無料で配布しようと思うとページ数はなかなか増やしにくいのかもしれないが、わかりやすい記述を最優先にしてページ数は多少増やせないのかなと思う。</p>
-<h2 id=次に読みたいしたい>次に読みたい･したい</h2>
-<ul>
+<h2 id=次に読みたいしたい>次に読みたい･したい <a href=#%e6%ac%a1%e3%81%ab%e8%aa%ad%e3%81%bf%e3%81%9f%e3%81%84%e3%81%97%e3%81%9f%e3%81%84>#</a></h2><ul>
 <li>ミクロ経済について学びたい
 <ul>
 <li>積ん読していて、日本史を読んでいて土地を介した経済に興味を持ったから</li>
 </ul>
 </li>
 </ul>
-<h2 id=謝辞>謝辞</h2>
-<p>歴史を作った人に感謝。</p>
-<h2 id=参照>参照</h2>
-<ul>
+<h2 id=謝辞>謝辞 <a href=#%e8%ac%9d%e8%be%9e>#</a></h2><p>歴史を作った人に感謝。</p>
+<h2 id=参照>参照 <a href=#%e5%8f%82%e7%85%a7>#</a></h2><ul>
 <li><a href=https://www.yamakawa.co.jp/product/70012>詳説日本史</a></li>
 </ul>
 </p>
