--- a/ja-blog/review-tech-to-support-processors/index.html
+++ b/ja-blog/review-tech-to-support-processors/index.html
@@ -108,21 +108,19 @@ May 17, 2022
 <li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li>
 <li><a href=#%E5%8F%82%E7%85%A7>参照</a></li>
 </ul>
-<p><img src=/images/nvidia_black_jacket.jpeg alt=nvidia></p>
-<h2 id=感想>感想</h2>
-<p>読んで良かったとは思いましたが、人におすすめはしないでしょう。コンピュータ・アーキテクチャの教科書と最新のサーベイ論文を読んだ方が良いと思うからです。</p>
+<p>
+<img src=/images/nvidia_black_jacket.jpeg alt=nvidia>
+</p>
+<h2 id=感想>感想 <a href=#%e6%84%9f%e6%83%b3>#</a></h2><p>読んで良かったとは思いましたが、人におすすめはしないでしょう。コンピュータ・アーキテクチャの教科書と最新のサーベイ論文を読んだ方が良いと思うからです。</p>
 <p>本書では学部の授業･教科書で勉強するようなコンピュータ･アーキテクチャに関することを復習できました。
 忘れていることや、教科書と比べて説明がわかりにくいと思うことが多々ありました。特にメモリに関連した部分です。理解が浅いと読みにくいので、ある程度理解している人が読むべき本なのでしょう。本書を読んで改めてコンピュータ・アーキテクチャに関する理解が浅いことを感じたので後で復習をしようと思います。</p>
 <p>コンピュータ・アーキテクチャの授業･教科書では学ばないけれども本書で取り上げられていたこととして仮想化や、マルチプロセッサ、GPGPU が上げられます。
 <a href=https://www.khronos.org/opencl/>OpenCL</a>も単語を聞いただけでしたが、本書を読み OpenCL とは業界の標準的な GPGPU のプログラミングシステムだということが学べてよかったです。
 ただ、発展的な内容は出版当時の 2011 年の情報であり古いものも多い印象です。そのためわざわざ本書を買って学ぶべきだとは思いませんでした。</p>
-<h2 id=次に読みたいしたい>次に読みたい･したい</h2>
-<p>理論的な部分はパタヘネを再度読みたいと思います。余力があれば読み終えていないヘネパタも読みたいです。
+<h2 id=次に読みたいしたい>次に読みたい･したい <a href=#%e6%ac%a1%e3%81%ab%e8%aa%ad%e3%81%bf%e3%81%9f%e3%81%84%e3%81%97%e3%81%9f%e3%81%84>#</a></h2><p>理論的な部分はパタヘネを再度読みたいと思います。余力があれば読み終えていないヘネパタも読みたいです。
 実践的な部分は、プロセッサに関して実装レベルで理解していないことが多いので、また CPU の実装をしたいと思います。ちょうど RISC-V と Arm の違いについて学ぼうと思っていたので良い機会です。</p>
-<h2 id=謝辞>謝辞</h2>
-<p>著者の Hisa Ando さん、面白い本をありがとうございます。</p>
-<h2 id=参照>参照</h2>
-<p><a href=https://gihyo.jp/book/2011/978-4-7741-4521-1>プロセッサを支える技術</a></p>
+<h2 id=謝辞>謝辞 <a href=#%e8%ac%9d%e8%be%9e>#</a></h2><p>著者の Hisa Ando さん、面白い本をありがとうございます。</p>
+<h2 id=参照>参照 <a href=#%e5%8f%82%e7%85%a7>#</a></h2><p><a href=https://gihyo.jp/book/2011/978-4-7741-4521-1>プロセッサを支える技術</a></p>
 </p>
 </div>
 </div>
