--- a/en-blog/hello-world/index.html
+++ b/en-blog/hello-world/index.html
@@ -106,14 +106,11 @@ May 7, 2022
 <li><a href=#acknowledgement>Acknowledgement</a></li>
 <li><a href=#references>References</a></li>
 </ul>
-<h2 id=in-a-nutshell>In a nutshell</h2>
-<ul>
+<h2 id=in-a-nutshell>In a nutshell <a href=#in-a-nutshell>#</a></h2><ul>
 <li>I have created my personal blog.</li>
 </ul>
-<h2 id=acknowledgement>Acknowledgement</h2>
-<p>Thank you, the author of <a href=https://github.com/526avijitgupta/gokarna>gokarna</a>, which I use for this blog&rsquo;s theme.</p>
-<h2 id=references>References</h2>
-<ul>
+<h2 id=acknowledgement>Acknowledgement <a href=#acknowledgement>#</a></h2><p>Thank you, the author of <a href=https://github.com/526avijitgupta/gokarna>gokarna</a>, which I use for this blog&rsquo;s theme.</p>
+<h2 id=references>References <a href=#references>#</a></h2><ul>
 <li><a href=https://github.com/526avijitgupta/gokarna>https://github.com/526avijitgupta/gokarna</a></li>
 </ul>
 </p>
