--- a/ja-blog/index.html
+++ b/ja-blog/index.html
@@ -91,6 +91,11 @@
 <div class="container list-posts">
 <h1 class=list-title>Ja-blogs</h2>
 <h2 class=posts-year>2022</h2><article class=post-title>
+<a href=https://diohabara.github.io/ja-blog/1st-month-at-utd/ class=post-link>UTDでの最初の1ヶ月</a>
+<div class=flex-break></div>
+<span class=post-date>October 6, 2022</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/intern-at-indeed-japan/ class=post-link>Indeed Japanでインターンしてきた</a>
 <div class=flex-break></div>
 <span class=post-date>August 22, 2022</span>
