--- a/ja-blog/intern-at-indeed-japan/index.html
+++ b/ja-blog/intern-at-indeed-japan/index.html
@@ -111,22 +111,19 @@ August 22, 2022
 <li><a href=#%E8%9B%87%E8%B6%B3>蛇足</a></li>
 <li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li>
 </ul>
-<h2 id=3-行まとめ>3 行まとめ</h2>
-<ul>
+<h2 id=3-行まとめ>3 行まとめ <a href=#3-%e8%a1%8c%e3%81%be%e3%81%a8%e3%82%81>#</a></h2><ul>
 <li>Indeed でのインターンは昼飯が出てくるので良かった</li>
 <li>インターンは上司 x チーム x テーマガチャ</li>
 <li>英語はそこまで問題にはならない</li>
 </ul>
-<h2 id=インターンの-1-日>インターンの 1 日</h2>
-<p>題名の通り 6 月から 8 月は Indeed Japan でインターンをしていた。</p>
+<h2 id=インターンの-1-日>インターンの 1 日 <a href=#%e3%82%a4%e3%83%b3%e3%82%bf%e3%83%bc%e3%83%b3%e3%81%ae-1-%e6%97%a5>#</a></h2><p>題名の通り 6 月から 8 月は Indeed Japan でインターンをしていた。</p>
 <p>最初に、インターンとして過ごした僕の 1 日(参考)をお話しようと思う。</p>
 <p>僕はオフィスの方が捗るタイプなので自宅から働いたことはほぼなかった。そのため 1 日はオフィスから始まり、オフィスで終わると考えてもらって良い。オフィスは一応フリーアドレスなのだが、使う席は予約する必要がありそこが面倒だった。しかし、オフィスはきれいであり冷房も効いていて(諸事情で)冷蔵が使えない自宅と比較すると最高の労働環境だった。</p>
 <p>恵比寿オフィスは自宅から徒歩 5 分の場所にあり、飲食物が常備されていて無料で飲み食いをすることができた。僕は朝オフィスに着いたら”in ゼリー”を飲み、メールを読んで仕事を始めていた。眠くなったらレッド・ブルーを飲んでいたし、チームの人はめちゃくちゃコーラを飲んでいた。昼ごはんも無料で食べられたので、会社に通勤していた日は夕飯のマック以外にお金を払う必要がなかった。。昼の食事が美味しいかどうかはメニューによるが、総じてまずくはないというのが正直な感想である。美味しいと記憶に残っているのはうなぎである。オフィスによって食器の素材が変わるのだが、恵比寿は紙でありご飯がへばりつくのが難儀だった。飲食が無料であるのを当然と思ってはいけないと思うが、少なくとも飲食が有料な会社は積極的に選ばないと思う。</p>
 <p>仕事で使う PC は会社から支給された 16 インチ MacBook Pro で、確か CPU は M1 Max でメモリも 64GB と開発用には申し分なかった。また、VM も自由に建てることができ Ubuntu 環境で働くことも可能だった。ハードウェアスペックが律速となることはなく、この点は非常に快適だった。</p>
 <p>チームはスクラムを導入しており、Sprint、メンターとの 1on1 が午前には入っていた。その他会議も最初は入っていたが、徐々にインターンは参加しなくても良いのでは？ということで参加せずに開発に集中することになった。この柔軟性の高さには感心した。今までのインターンと比べてもトップレベルで働きやすい環境だったと思う。</p>
 <p>~~そんな感じで昼ごはんを食べ血糖値がバク上がりしインスリンがドバドバ出て爆睡していたら、知らない間に就業時間が終わっている。~~午後は会議少なめでコーディングや技術調査を中心に過ごした。社員だと午後も会議があるらしいので、インターン生はかなり開発メインでやらせてもらっていたと思う。生産的な 1 日を過ごせるようにチームが頑張っているんだなとは思いながら過ごしていた。</p>
-<h2 id=社会人疑似体験>社会人疑似体験</h2>
-<p>日本のベンチャーのインターンだと具体的な課題に関して、その課題を管理するチケットが発行され、それをこなす「業務委託(？)」みたいな働き方が多いと思う。特にマネジメントが崩壊している会社は(体験談)。一方、Indeed のインターンはそういう小間使いみたいな体験にならないように工夫していた。</p>
+<h2 id=社会人疑似体験>社会人疑似体験 <a href=#%e7%a4%be%e4%bc%9a%e4%ba%ba%e7%96%91%e4%bc%bc%e4%bd%93%e9%a8%93>#</a></h2><p>日本のベンチャーのインターンだと具体的な課題に関して、その課題を管理するチケットが発行され、それをこなす「業務委託(？)」みたいな働き方が多いと思う。特にマネジメントが崩壊している会社は(体験談)。一方、Indeed のインターンはそういう小間使いみたいな体験にならないように工夫していた。</p>
 <p>最初に抽象度が高い課題が与えられ、その後マネージャーやメンターと一緒にその課題を解決するために(僕が主となって)Design Doc を書いて議論をする。そして、Design Doc に合わせて具体的な課題を設定し、いくつかチケットを発行しこなしていった。</p>
 <p>Design Doc は問題がどういうものか設定し、技術的にどう解決するかという 2 段階の議論から構成されていて、ただコーディングをするだけではない「社会人っぽさ」を体験できると思う。Design Doc に関して賛否両論があるが、インターンとして書く分には大きな不満はなかった。Google Document がコードブロックを書きにくいとか、そういう使用する技術に関する不満はあったが、Design Doc そのものには作成する過程も含めて良い印象を持った。議論をすることで問題がなにかを深く理解することができるし、納得感を得ることもできる。</p>
 <p>ある課題に対して新しい技術を試すというのがインターンでのテーマだった。体感だと割合の多い順に以下のような時間の使い方をした。新しい技術なのでその調査が最も多く、次に導入に関連する計算資源の用意や権限周りの頼み事が来た。そして、設計やその技術の導入が初めてということもあり議論に時間がかかり、コーディングはほとんどしなかった。自分ではどうにかできない権限周りの処理を待っている時間が結構長いのも「社会人っぽさ」だと思う。欲を言えばもっとコーディングに時間を割きたかったが、インターンはテーマを含めたガチャであり、お金をもらってする社会人ごっこなのでこの待ち時間も含めて「社会人っぽさ」を感じていた。</p>
@@ -157,18 +154,14 @@ August 22, 2022
 </tbody>
 </table>
 <p>テーマ以外にもガチャ要素はある。マネージャーとメンター、要は上司である。自分は上司に任せればなんとかなるという安心感があったが、ひどいインターンだと「君の成長のためにあえて何も教えない」みたいなことを断言する上司がいる(体験談)ので今回は当たりだな〜と思っていた。まぁ、上司のやばいインターンでもお金を払ってくれるだけましということもありますが(体験談)。</p>
-<h2 id=人生は冒険や-by-ゆたぼん>「人生は冒険や！」 by ゆたぼん</h2>
-<p>気になる人もいると思うが、一応 Indeed は社内公用語が英語である。だから極力英語ができた方が良いのだが、英語ができるかで過度に不安にならなくても良いと思う(米国の大学院に留学予定並感)。</p>
+<h2 id=人生は冒険や-by-ゆたぼん>「人生は冒険や！」 by ゆたぼん <a href=#%e4%ba%ba%e7%94%9f%e3%81%af%e5%86%92%e9%99%ba%e3%82%84-by-%e3%82%86%e3%81%9f%e3%81%bc%e3%82%93>#</a></h2><p>気になる人もいると思うが、一応 Indeed は社内公用語が英語である。だから極力英語ができた方が良いのだが、英語ができるかで過度に不安にならなくても良いと思う(米国の大学院に留学予定並感)。</p>
 <p>大事な話の場合は口頭だけでなく文章でもメモされるし、メモされないことでも大事そうなら聞き直せば良い。話す際も自信がなさげに話すよりも堂々と話した方が良い。そもそも聞き逃したら終わりな情報ではないし、大事なら文章に起こせば良いだけだ。そういう心持ちで働いていたので英語が云々で言い訳(？)をしている人も見るとなんかな〜という気持ちになる。まぁ、あくまでインターンだからかもしれないが細かいところには気にしないで言いたいことは言って、気になったら聞くという姿勢があれば良かった。インターンは少なくともそうだったというだけ。</p>
-<h2 id=総じて>総じて</h2>
-<p>上で述べているように良い体験だったと思う。ソフトウェア開発で必要な工程すべてが体験できたし、お金もそこそこもらえて、福利厚生も十分だったからである。Indeed という会社に入社できたら幸福度は高いと思う。特に日本の場合は IT エンジニアの給料が外資とメガベンで倍くらい変わるし、Indeed より待遇の良い会社は Google くらい(それも同じくらい？)だと思う。</p>
-<h2 id=蛇足>蛇足</h2>
-<p>ただ、個人的に Indeed に就職する優先度は低いかなと思った。まず、自分の与えられたタスクは Proof of Concept に近く、Indeed で体験したかった大規模に開発されているソフトウェアを拡張するという経験が積めなかった。そのため、この会社で働いて自分が活躍できるのかわからないと思ったからだ。</p>
+<h2 id=総じて>総じて <a href=#%e7%b7%8f%e3%81%98%e3%81%a6>#</a></h2><p>上で述べているように良い体験だったと思う。ソフトウェア開発で必要な工程すべてが体験できたし、お金もそこそこもらえて、福利厚生も十分だったからである。Indeed という会社に入社できたら幸福度は高いと思う。特に日本の場合は IT エンジニアの給料が外資とメガベンで倍くらい変わるし、Indeed より待遇の良い会社は Google くらい(それも同じくらい？)だと思う。</p>
+<h2 id=蛇足>蛇足 <a href=#%e8%9b%87%e8%b6%b3>#</a></h2><p>ただ、個人的に Indeed に就職する優先度は低いかなと思った。まず、自分の与えられたタスクは Proof of Concept に近く、Indeed で体験したかった大規模に開発されているソフトウェアを拡張するという経験が積めなかった。そのため、この会社で働いて自分が活躍できるのかわからないと思ったからだ。</p>
 <p>また、他で言及したように権限周りの待ち時間が長く、開発をせずに待っている時間が非常に長かった。コードを書きたいからインターンをしにきたのにコードが書けない状態が続くのは結構辛く、昼食の際にアマプラで「邪神ちゃんドロップキック」を観ながら「暇だな〜」と思っていたのを覚えている。</p>
 <p>僕ができるならやりたいのは俗に言う低レイヤーと呼ばれる仕事だ。Indeed での仕事の大半は Web 開発であり、ブラウザ開発だったりプログラミング言語の開発のような仕事ができればしたいと思っていた自分としてはお金をたくさんもらってもこれを仕事にするのは正直微妙かもな〜と思った。ただ、ゴリゴリ開発できていたらまた感想は違っていたと思う。これも含めてガチャなのである。というか、低レイヤーな仕事が多そうだという理由でアメリカに留学をしているのもある。</p>
 <p>最後に、おそらくコミュニケーションの問題があると思う。以前インターンしていた会社ですごく良い印象を持った会社がある。その会社はインターン生同士のコミュニケーションが多く、会社への帰属意識が強かった。また、メンターのレビューが爆速であり、「開発をしている感」が強かった。結局一緒に働く人が好きかどうかが割と大事だったりするのだろう(まぁ、IT 業界は転職が多いので就職時にそれを気にするのがアホだとも思いますが)。リモートだとそこら辺が微妙であまり社会人になりたいと思わないんだよな〜〜〜〜そういうことで、もっと他のインターン生と仲良くしたかったね。多分出社していたの僕だけ&mldr;</p>
-<h2 id=謝辞>謝辞</h2>
-<p>Indeed でのインターン期間中に関わった方々、本当にありがとうございます。すごく良い体験でしたし、他のどの会社でもなくて Indeed でインターンできてよかったと思います。</p>
+<h2 id=謝辞>謝辞 <a href=#%e8%ac%9d%e8%be%9e>#</a></h2><p>Indeed でのインターン期間中に関わった方々、本当にありがとうございます。すごく良い体験でしたし、他のどの会社でもなくて Indeed でインターンできてよかったと思います。</p>
 </p>
 </div>
 </div>
