--- a/ja-blog/lonely-content/index.html
+++ b/ja-blog/lonely-content/index.html
@@ -107,17 +107,14 @@ June 17, 2022
 <li><a href=#%E8%BF%91%E6%B3%81>近況</a></li>
 <li><a href=#ps>&ldquo;P.S."</a></li>
 </ul>
-<h2 id=謝辞>謝辞</h2>
-<p>Indeedで仕事ができない僕と一緒に働いてくださる同じチームの方々ありがとうございます。</p>
-<h2 id=近況>近況</h2>
-<p>最近は平日はIndeedで4日ほどアルバイトをしている。その帰りは勉強すると決めているので、家には直接帰らず席の空いたマックや自宅近くの公園で本を読んだり勉強をしている。</p>
+<h2 id=謝辞>謝辞 <a href=#%e8%ac%9d%e8%be%9e>#</a></h2><p>Indeedで仕事ができない僕と一緒に働いてくださる同じチームの方々ありがとうございます。</p>
+<h2 id=近況>近況 <a href=#%e8%bf%91%e6%b3%81>#</a></h2><p>最近は平日はIndeedで4日ほどアルバイトをしている。その帰りは勉強すると決めているので、家には直接帰らず席の空いたマックや自宅近くの公園で本を読んだり勉強をしている。</p>
 <p>マックや公園で強く感じるのは孤独感だ。一緒に勉強をする人もいないし、勉強の成果を共有する人もいない。ただ、黙々と勉強をすることで自分の知識が広がっているのを感じている。</p>
 <p>同じような感覚を覚えたことがある。予備校生だったときだ。高校、大学は割と惰性で過ごしていたと思う。一方、予備校のときはかなり自由だった。黙々と自分ですることを決めて勉強していた。予定も結構細かく立て、どのような目標の立て方が生産性を最大化するのか1ヶ月毎に試していたと思う。</p>
 <p>自分の高校からは予備校に行く人が自分だけで強い孤独感を感じていた。おまけに自分の所属していた予備校は進学校の人ばかりで周りは知り合い同士だった。そんな環境の中で独りで勉強することは辛くも豊かな時間だった。</p>
 <p>今会社には友達はいない。リアルのオフィスに集まってインターン同期と友達になるというのはすごく良いことだと思う。しかし、まぁそうじゃないことが逆に自分にとって利益になることもあるんだということがわかった良い機会だった。友達がいないからインターン終わりに勉強ができる。</p>
 <p>自分はこれから知り合いが一人もいない大学に行く(はず)が、孤独感だけでなく充実感も強く感じる1-2年にしたいと密かに決意を固めたのであった。</p>
-<h2 id=ps>&ldquo;P.S.&rdquo;</h2>
-<p>インターンに行っていない残りの3日間は割と文化的な生活をしており、上記のように感傷に浸るのはインターンとして働く4日間のみです。</p>
+<h2 id=ps>&ldquo;P.S.&rdquo; <a href=#ps>#</a></h2><p>インターンに行っていない残りの3日間は割と文化的な生活をしており、上記のように感傷に浸るのはインターンとして働く4日間のみです。</p>
 </p>
 </div>
 </div>
