--- a/ja-blog/quit-hatena-part-time/index.html
+++ b/ja-blog/quit-hatena-part-time/index.html
@@ -124,57 +124,46 @@ July 19, 2022
 <li><a href=#%E8%AC%9D%E8%BE%9E>謝辞</a></li>
 <li><a href=#%E5%8F%82%E7%85%A7>参照</a></li>
 </ul>
-<p><img src=/images/hatena-bookmark-logo.png alt=hatena></p>
-<h2 id=3行まとめ>3行まとめ</h2>
-<ul>
+<p>
+<img src=/images/hatena-bookmark-logo.png alt=hatena>
+</p>
+<h2 id=3行まとめ>3行まとめ <a href=#3%e8%a1%8c%e3%81%be%e3%81%a8%e3%82%81>#</a></h2><ul>
 <li>株式会社はてなのアルバイトをやめた</li>
 <li>はてなではエンジニアのアルバイトをした</li>
 <li>時給が安い(小並感)</li>
 </ul>
-<h2 id=退職>退職？</h2>
-<p>はてなでアルバイトをしていましたが、最近(5月)やめました(7月19日になるまで投稿をサボっていました！！！)。</p>
+<h2 id=退職>退職？ <a href=#%e9%80%80%e8%81%b7>#</a></h2><p>はてなでアルバイトをしていましたが、最近(5月)やめました(7月19日になるまで投稿をサボっていました！！！)。</p>
 <p>はてなでサマーインターンをした人の記事はよく見かけませんか？おそらくはてなの目玉イベントだからでしょう。一方、アルバイト(そもそもアルバイトとインターンの違いがわかっていません)をした人の記事は寡聞にしてあまり知りません。しかし、アルバイトがどのようなことをしているのか興味がある人も多いと思います。需要があると思い記事にまとめてみました。</p>
 <p>ちなみに、この記事が対象としているのは<strong>これからはてなでアルバイトをしようと思っている人</strong>もしくは<strong>はてなでのアルバイトがどのようなものか気になっているはてなユーザー</strong>です。</p>
-<h2 id=はてなでは何をしていたのか>はてなでは何をしていたのか</h2>
-<h3 id=非エンジニア向け>非エンジニア向け</h3>
-<p><a href=https://b.hatena.ne.jp/>はてなブックマーク</a>というソーシャルブックマークサービスに関するチームで働いていました。ソーシャルブックマークとはオンライン上にインターネットのページを記録するサービスのことです。はてなブックマークではインターネットのページに対してコメントを残し、議論をしたり他人の議論の様子を観察したりすることができます。</p>
+<h2 id=はてなでは何をしていたのか>はてなでは何をしていたのか <a href=#%e3%81%af%e3%81%a6%e3%81%aa%e3%81%a7%e3%81%af%e4%bd%95%e3%82%92%e3%81%97%e3%81%a6%e3%81%84%e3%81%9f%e3%81%ae%e3%81%8b>#</a></h2><h3 id=非エンジニア向け>非エンジニア向け <a href=#%e9%9d%9e%e3%82%a8%e3%83%b3%e3%82%b8%e3%83%8b%e3%82%a2%e5%90%91%e3%81%91>#</a></h3><p><a href=https://b.hatena.ne.jp/>はてなブックマーク</a>というソーシャルブックマークサービスに関するチームで働いていました。ソーシャルブックマークとはオンライン上にインターネットのページを記録するサービスのことです。はてなブックマークではインターネットのページに対してコメントを残し、議論をしたり他人の議論の様子を観察したりすることができます。</p>
 <p>はてなブックマークはユーザーからは1つのサービスに見えるのですが、実は複数のサービスが組み合わさったものです。そして、そのようなサービス群を動かすためのサーバーのいくつかははてな社のものです。そのサービスの一部が外部の会社のサーバーで動くような変更を加えました。サービスを他の会社のサーバーに移すことで、サーバーの管理が容易になり、コストが抑えられ、拡張が容易になります。流行りのクラウド化をしたわけです。</p>
 <p>仕事で必要な知識にはアルバイトを始めた頃には知らないものもたくさんありましたが、調べる時間を頂きながら社員の方に質問をして進めました。というか、ソフトウェアエンジニアの仕事というのはこういうもので調べ物をするだけでお金がもらえるものなのです。調べものや調べながら試すことが好きな人は向いている仕事だと思います。(なおバイト)</p>
 <p><strong>これからバイトをするつもりの人</strong>は知識の多寡よりも、知らないことは調べればなんとかなるという経験･自信･直感があればバイトをしても大丈夫だと思います。以下はアルバイトのリンクです。</p>
 <p><a href=https://hatenacorp.jp/recruit/arbeit>はてなアルバイト求人</a></p>
 <p><strong>はてなでのアルバイトがどのようなものか気になっているはてなユーザー</strong>はこんな感じで自分の使っているサービスができているんだとわかっていただけると幸いです。</p>
-<h3 id=エンジニア向け>エンジニア向け</h3>
-<p>ブックマークチームでCI/CDの改善をしていました。もう少し具体的に言うとJenkins上で実行されていたCI/CDのパイプラインをGitHub Actionsに移すという作業をしていました。一部のタスクは社員の方の力が必要であったので、それを社員の方に頼んでいる間にCI/CDの高速化もやりました。</p>
+<h3 id=エンジニア向け>エンジニア向け <a href=#%e3%82%a8%e3%83%b3%e3%82%b8%e3%83%8b%e3%82%a2%e5%90%91%e3%81%91>#</a></h3><p>ブックマークチームでCI/CDの改善をしていました。もう少し具体的に言うとJenkins上で実行されていたCI/CDのパイプラインをGitHub Actionsに移すという作業をしていました。一部のタスクは社員の方の力が必要であったので、それを社員の方に頼んでいる間にCI/CDの高速化もやりました。</p>
 <p>Docker、Jenkins、GitHub Actionsにはあまり詳しくなかったのですが他のレポジトリのコードを読み、ネット上に上がっているサンプルコードやGitHubのドキュメントを参考に仕事を進めました。DockerやGitHub Actionsに関して勉強をしてお金をもらっているようなものだったので、個人的には良かったと思います。</p>
-<h2 id=感想>感想</h2>
-<p>星を付けるなら☆☆☆☆でした。以下採点の根拠です。</p>
-<h3 id=社員が優しい3つ加点>社員が優しい(☆3つ加点)</h3>
-<p>何をしても怒られません。だから心理的安全性は高いです。今までに怒られて仕事の効率が上がったことはないので、とても良かったです。また、わからないことを質問するとすぐに反応が返ってくるのも良かったです。</p>
-<h3 id=社員の能力が高い3つ加点>社員の能力が高い(☆3つ加点)</h3>
-<p>社員の技術力が高いと思いました。上で書いた質問への反応が早いことと関連しているかもしれません。</p>
+<h2 id=感想>感想 <a href=#%e6%84%9f%e6%83%b3>#</a></h2><p>星を付けるなら☆☆☆☆でした。以下採点の根拠です。</p>
+<h3 id=社員が優しい3つ加点>社員が優しい(☆3つ加点) <a href=#%e7%a4%be%e5%93%a1%e3%81%8c%e5%84%aa%e3%81%97%e3%81%843%e3%81%a4%e5%8a%a0%e7%82%b9>#</a></h3><p>何をしても怒られません。だから心理的安全性は高いです。今までに怒られて仕事の効率が上がったことはないので、とても良かったです。また、わからないことを質問するとすぐに反応が返ってくるのも良かったです。</p>
+<h3 id=社員の能力が高い3つ加点>社員の能力が高い(☆3つ加点) <a href=#%e7%a4%be%e5%93%a1%e3%81%ae%e8%83%bd%e5%8a%9b%e3%81%8c%e9%ab%98%e3%81%843%e3%81%a4%e5%8a%a0%e7%82%b9>#</a></h3><p>社員の技術力が高いと思いました。上で書いた質問への反応が早いことと関連しているかもしれません。</p>
 <p>暇なときに社員の方のブログ記事やコードを読んだのですが、｢これでいいんだよこれで｣と思いながら読んでいました。ブログの内容からコンピュータに関する基礎的な知識を持っている方が多いということがわかり、質問の際に0から説明をしなくても社員さんが概要を理解していたので非常に楽でした。ただ同時に、こういう職場ばかりではないと思うので、自分が説明する能力を高めようとも思いました。</p>
 <p>また、ソフトスキルも高いと思いました。メンターのメンタリングやマネジメントが丁寧で良かったです。目的に必要なタスクの設定やその分割をきれいにして頂き、困ったらこの人かチームメンバーに聞いておけばよいだろうと安心して働けました。また、作業で詰まっている際にあちらから1 on 1の機会を設けて頂き大変助かりました。</p>
 <p>名前を一々挙げませんが、その他のメンバーも他人を傷つかないように気をつけながら働いていており、素晴らしい職場だったと思います。</p>
 <p>(話が脱線します)</p>
 <p>1ユーザーから見てはてなブックマークは中々に<em>激しい</em>議論の場だと思いますが、作っている人たちはどうやったら建設的な議論ができるか考えているのが印象的でした。激しいところも好きなのですが、最低限度のラインが守られると良いですね。<sup id=fnref:1><a href=#fn:1 class=footnote-ref role=doc-noteref>1</a></sup></p>
-<h3 id=バイト業務委託の受け入れ体制に改善点があった1つ減点>バイト･業務委託の受け入れ体制に改善点があった(☆1つ減点)</h3>
-<p><code>AWS IAM</code>でバイト相当の権限がなく、AWS上で作業ができずアルバイトだと一部の仕事ができず社員の方に頼む必要がありました。他のチームがどうかはわかりません。
+<h3 id=バイト業務委託の受け入れ体制に改善点があった1つ減点>バイト･業務委託の受け入れ体制に改善点があった(☆1つ減点) <a href=#%e3%83%90%e3%82%a4%e3%83%88%e6%a5%ad%e5%8b%99%e5%a7%94%e8%a8%97%e3%81%ae%e5%8f%97%e3%81%91%e5%85%a5%e3%82%8c%e4%bd%93%e5%88%b6%e3%81%ab%e6%94%b9%e5%96%84%e7%82%b9%e3%81%8c%e3%81%82%e3%81%a3%e3%81%9f1%e3%81%a4%e6%b8%9b%e7%82%b9>#</a></h3><p><code>AWS IAM</code>でバイト相当の権限がなく、AWS上で作業ができずアルバイトだと一部の仕事ができず社員の方に頼む必要がありました。他のチームがどうかはわかりません。
 ｢バイトや業務委託用の権限を作った方が良いのでは？｣と思い、社員の方に相談しましたが元々バイトや業務委託はあまりおらず、いても必要になる場面がなかった(仕事を振らなかった)ので管理をしていないようです。</p>
 <p>今回の自分のタスクだと必要だっただけで仕事一般に必要にはなりませんが、この他にも入社時に多少バタついた覚えがあるので<strong>伸びしろがある</strong>と思いました。</p>
 <p>ただ、ここに時間･お金をかけるかどうかは経営上仕方のない判断な気もするので何が正しいのかはわかりません。あくまでバイトとして働きにくい部分もあったというだけです。企業には正社員でも多かれ少なかれこのような権限の問題はあると理解しています。</p>
-<h3 id=アルバイト以外の身分で働きたいと思った発生せず>アルバイト以外の身分で働きたいと思った(☆発生せず)</h3>
-<p>この問題は会社の問題ではないので☆は発生しません。</p>
+<h3 id=アルバイト以外の身分で働きたいと思った発生せず>アルバイト以外の身分で働きたいと思った(☆発生せず) <a href=#%e3%82%a2%e3%83%ab%e3%83%90%e3%82%a4%e3%83%88%e4%bb%a5%e5%a4%96%e3%81%ae%e8%ba%ab%e5%88%86%e3%81%a7%e5%83%8d%e3%81%8d%e3%81%9f%e3%81%84%e3%81%a8%e6%80%9d%e3%81%a3%e3%81%9f%e7%99%ba%e7%94%9f%e3%81%9b%e3%81%9a>#</a></h3><p>この問題は会社の問題ではないので☆は発生しません。</p>
 <p>例えば、フルタイムのインターンの場合は｢次回のリリースに合わせた新機能の追加｣というタスクを振り、しっかりとメンタリングしながら仕事をすることが可能です。しかし、アルバイトだと稼働できる時間が細切れだったり、週に10数時間しか入れないのでどこの会社もCI/CDなどの｢今も動いているけど将来的には書き換えたい｣仕事をやらせる印象があります。もしくは｢今は動いていないけど将来的に導入しようか迷っている｣こと。</p>
 <p>僕ならそうするかなと思っているだけで実際にそうだったのかはわかりません。</p>
-<h3 id=時給が安い1つ減点>時給が安い(☆1つ減点)</h3>
-<p>ソフトウェアエンジニアのバイトにしては時給が低いです。特に試用期間の時給のまま終わった(試用期間であろうがなかろうが安いですが)のでほぼ東京の最低賃金くらいの金額(1050円/時)で働いていました。試用期間が過ぎると1200円/時です。</p>
+<h3 id=時給が安い1つ減点>時給が安い(☆1つ減点) <a href=#%e6%99%82%e7%b5%a6%e3%81%8c%e5%ae%89%e3%81%841%e3%81%a4%e6%b8%9b%e7%82%b9>#</a></h3><p>ソフトウェアエンジニアのバイトにしては時給が低いです。特に試用期間の時給のまま終わった(試用期間であろうがなかろうが安いですが)のでほぼ東京の最低賃金くらいの金額(1050円/時)で働いていました。試用期間が過ぎると1200円/時です。</p>
 <p>僕はその分気楽に働けましたが、高時給なアルバイトをしたい人は他を当たったほうが良いです。特に最近はアルバイト/インターンでも時給2500円くらいがIT大手だと一般的になっています。気になった人は以下のリンク(いわゆる魔法のスプレッドシート)をご覧ください。</p>
 <p><a href=https://docs.google.com/spreadsheets/d/e/2PACX-1vSDSvWQNtJMW5IUsLF6FP12PNt8nSqaqw554UiNnUEYAZlWSp7PU509-M2IJ96D72gpCJznDvyied57/pubhtml>ITエンジニアインターン</a></p>
 <p>専門的な仕事だと思うので、有名な企業の時給が低いというのは夢がありません。是非とも利益を上げていただいて時給を上げてほしいです。</p>
-<h2 id=謝辞>謝辞</h2>
-<p>仕事をしていたのは5月までの短い期間でしたが、勉強になることがたくさんありました。社員の方はありがとうございました。</p>
-<h2 id=参照>参照</h2>
-<ul>
+<h2 id=謝辞>謝辞 <a href=#%e8%ac%9d%e8%be%9e>#</a></h2><p>仕事をしていたのは5月までの短い期間でしたが、勉強になることがたくさんありました。社員の方はありがとうございました。</p>
+<h2 id=参照>参照 <a href=#%e5%8f%82%e7%85%a7>#</a></h2><ul>
 <li><a href=https://b.hatena.ne.jp/guide>https://b.hatena.ne.jp/guide</a></li>
 </ul>
 <section class=footnotes role=doc-endnotes>
