deploy: f2c9e83d0e620bb0f85bd1d3007f611b24b4d456

--- a/ja-blog/1st-month-at-utd/index.html
+++ b/ja-blog/1st-month-at-utd/index.html
@@ -1205,7 +1205,7 @@ October 6, 2022
 <h3 id=進路>進路 <a href=#%e9%80%b2%e8%b7%af>#</a></h3><p>最近アメリカのビッグテックに入って年収を日本円にして自慢をすることが日本の Twitter で流行っていますね(？)
 去年まではアメリカのソフトウェアエンジニア市場はちょっとしたバブルのような状態で GAFA にバカバカ入れる、インターンできるという感じだったようです。しかし、現在は不況に備えてエンジニアの採用がストップしているところが多いです。</p>
 <p>米国で留学してテック系企業でインターンをしようとしている学生は危機的状況に面しています。クソ高い学費を払って大学院に行っているのは(特に CS 専攻の場合は)現地で就職して稼ぐためです。それができないとなるとどうしようかと、進路を再考しています。最近は上述のセキュリティの授業の先生の研究テーマが面白そう＆Ph.D. Program でも最低限暮らせるくらいの給料が出る＆Ph.D.を持っていると今後 VISA で困ることが減りそうという理由で Master 卒業後に Ph.D.として米国の大学院を受験しようかと思っています。ただ、夏に良さげなインターン先に行けてリターンオファーが来たらどうしようかなと取らぬ狸の皮算用も。</p>
-<p>とりあえず今はどっちもできるように勉強を頑張りながら LeetCode を日々やりつつ、研究室でも成果を出そうとしているという感じです。Ph.D.を目指すなら研究にも力が入れたいので、就活・学業・研究に適切な優先度を付けながら自分を管理するのは中々大変です。</p>
+<p>とりあえず今はどっちもできるように勉強を頑張りながら LeetCode を日々やりつつ、研究室でも成果を出そうとしているという感じです。Ph.D.を目指すなら研究にも力を入れたいので、就活・学業・研究に適切な優先度を付けながら自分を管理するのは中々大変です。</p>
 <h2 id=まとめ>まとめ <a href=#%e3%81%be%e3%81%a8%e3%82%81>#</a></h2><p>大変なところはありますが、日本にいたら経験できないようなこと・出会えなかった人ばかりで総合的に満足しています。初めの 1 ヶ月でうまく行かなかった部分は挽回できるように頑張りたいです。</p>
 <h2 id=謝辞>謝辞 <a href=#%e8%ac%9d%e8%be%9e>#</a></h2><p>UTD の教授・友人、学費・生活費をくれる親、日本の知り合いに感謝</p>
 <h2 id=参照>参照 <a href=#%e5%8f%82%e7%85%a7>#</a></h2><ul>
