--- a/ja-blog/1st-month-at-utd/index.html
+++ b/ja-blog/1st-month-at-utd/index.html
@@ -159,7 +159,7 @@ October 6, 2022
 <p>教授との距離の近さは東大とは違った UTD の良い点だと思っています。</p>
 <h3 id=住まい>住まい <a href=#%e4%bd%8f%e3%81%be%e3%81%84>#</a></h3><p>アメリカと言っても都市部の大学には日本人が何人かいるものだと思います。最悪中国人や韓国人がいると思うのですが、うちの大学はそこまで有名ではないからか Master には日本人はおろか中国人も韓国人もほぼいません。インド人が大半です。中国人は大体 Ph.D.の学生ですね。</p>
 <p>インド人とは文化がかなり違うので、シェアハウスをした際にかなりカルチャーショックを受けました。UTD のインド人留学生はマンションの 1 室に 5−6 人は住むのでプライベートな空間がなくかなりしんどかったです。最初はリビングで寝ていたのですが、夜中にイヤホンをせずアニメを観る人がいたり毎晩会話をする人がいたりして寝られずストレスがめちゃくちゃ溜まりました。その後、リビングはやめてベッドを共有して 3 人 1 部屋で寝ることになったのですが、いびきがひどくて夜中に目が覚めたり、冷房が効きすぎて目が覚めたりしていました。毎日日本の友達に愚痴っていました。</p>
-<p>今は一人暮らしをしているのですが、逆に刺激が少なくて物足りないです。香辛料の匂いを気にしていた日々が懐かしくもあります。「自分は天の邪鬼だな」と思っています。できれば次の学期はシェアハウスをして家賃を抑えたいのですが、そのときは寝室が分ければ大丈夫だと思っています。</p>
+<p>今は一人暮らしをしているのですが、逆に刺激が少なくて物足りないです。香辛料の匂いを気にしていた日々が懐かしくもあります。「自分は天の邪鬼だな」と思っています。できれば次の学期はシェアハウスをして家賃を抑えたいと思っています。今回の反省を活かして寝室は分けるつもりです。そうすれば程よい刺激が得られつつ、プライベートもある程度確保できると予想しています。</p>
 <h3 id=食事>食事 <a href=#%e9%a3%9f%e4%ba%8b>#</a></h3><p>ご飯というかお金なのですが、学費と家賃が高すぎて(前述の通り、大学内で一人暮らしをすることにしてしまったのもあり)金欠による栄養失調が続いています。金欠が続くとカロリー/値段で考えるようになり、その結果辛ラーメンばかりを食べていますが、全然足りないですね。
 今日の朝、風呂場で裸の自分を見るとくびれができていて笑ってしまいました。仲の良い教授にも心配されてしまっています。</p>
 <p>対策として自炊をするようになりました。自炊なら安くてもある程度カロリーが取れます。車がないと特定のスーパーにしか行けない＆スーパーに行っても買える量が限定されるので、Walmart Plus を利用して材料は買っています。月額いくらか払えば、Walmart から食品などを配送してくれるサービスです。</p>
