--- a/ja-blog/index.html
+++ b/ja-blog/index.html
@@ -90,6 +90,11 @@
 <main id=content>
 <div class="container list-posts">
 <h1 class=list-title>Ja-blogs</h2>
+<h2 class=posts-year>2023</h2><article class=post-title>
+<a href=https://diohabara.github.io/ja-blog/review-2022/ class=post-link>2022年ふりかえり</a>
+<div class=flex-break></div>
+<span class=post-date>January 1, 2023</span>
+</article>
 <h2 class=posts-year>2022</h2><article class=post-title>
 <a href=https://diohabara.github.io/ja-blog/nsa_cbc_2022/ class=post-link>CTF初心者がNSA Codebreakerに参加した感想</a>
 <div class=flex-break></div>
@@ -142,7 +147,7 @@
 </article>
 </div>
 </main><footer class=footer>
-<span>&copy; 2022 </span>
+<span>&copy; 2023 </span>
 <span>
 Made with &#10084;&#65039; using <a target=_blank href=https://github.com/526avijitgupta/gokarna>Gokarna</a>
 </span>
