deploy: 1dd5a9842875d4674a0c163b419938f9fcbfcfbc

--- a/404.html
+++ b/404.html
@@ -37,10 +37,7 @@
 </div>
 <div class=nav-links>
 <div class=nav-link>
-<a href=https://diohabara.github.io/ja-blog/><span data-feather=map-pin></span> ブログ </a>
-</div>
-<div class=nav-link>
-<a href=https://diohabara.github.io/en-blog/><span data-feather=globe></span> blog </a>
+<a href=https://diohabara.github.io/blog/><span data-feather=globe></span> blog </a>
 </div>
 <div class=nav-link>
 <a href=https://diohabara.github.io/tags/> Tags </a>
@@ -64,10 +61,7 @@
 </div>
 <ul class="nav-hamburger-list visibility-hidden">
 <li class=nav-item>
-<a href=https://diohabara.github.io/ja-blog/><span data-feather=map-pin></span> ブログ </a>
-</li>
-<li class=nav-item>
-<a href=https://diohabara.github.io/en-blog/><span data-feather=globe></span> blog </a>
+<a href=https://diohabara.github.io/blog/><span data-feather=globe></span> blog </a>
 </li>
 <li class=nav-item>
 <a href=https://diohabara.github.io/tags/> Tags </a>
