--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
 </div>
 <div class=nav-links>
 <div class=nav-link>
-<a href=https://diohabara.github.io/ja-blog/><span data-feather=map-pin></span> ブログ </a>
-</div>
-<div class=nav-link>
-<a href=https://diohabara.github.io/en-blog/><span data-feather=globe></span> blog </a>
+<a href=https://diohabara.github.io/blog/><span data-feather=globe></span> blog </a>
 </div>
 <div class=nav-link>
 <a href=https://diohabara.github.io/tags/> Tags </a>
@@ -65,10 +62,7 @@
 </div>
 <ul class="nav-hamburger-list visibility-hidden">
 <li class=nav-item>
-<a href=https://diohabara.github.io/ja-blog/><span data-feather=map-pin></span> ブログ </a>
-</li>
-<li class=nav-item>
-<a href=https://diohabara.github.io/en-blog/><span data-feather=globe></span> blog </a>
+<a href=https://diohabara.github.io/blog/><span data-feather=globe></span> blog </a>
 </li>
 <li class=nav-item>
 <a href=https://diohabara.github.io/tags/> Tags </a>
@@ -100,24 +94,9 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/review-2022/ class=post-link>2022年ふりかえり</a>
+<a href=https://diohabara.github.io/blog/hello-world/ class=post-link>Hello World</a>
 <div class=flex-break></div>
-<span class=post-date>January 1, 2023</span>
-</article>
-<article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/nsa_cbc_2022/ class=post-link>CTF初心者がNSA Codebreakerに参加した感想</a>
-<div class=flex-break></div>
-<span class=post-date>December 27, 2022</span>
-</article>
-<article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/utd-fall-break/ class=post-link>ジャネーの法則によると人生の体感時間は3歳に物心がついて80歳まで生きるとして19歳で半分が終わっているらしいけど30歳まで大学にいることになりそうな件について</a>
-<div class=flex-break></div>
-<span class=post-date>November 21, 2022</span>
-</article>
-<article class=post-title>
-<a href=https://diohabara.github.io/ja-blog/1st-month-at-utd/ class=post-link>UTDでの最初の1ヶ月</a>
-<div class=flex-break></div>
-<span class=post-date>October 6, 2022</span>
+<span class=post-date>May 7, 2022</span>
 </article>
 </div>
 </main><footer class=footer>
