--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
-<a href=https://diohabara.github.io/blog/hello-world/ class=post-link>Hello World</a>
+<a href=https://diohabara.github.io/blog/obedient-cat/ class=post-link>picoCTF 2021: Obedient Cat</a>
 <div class=flex-break></div>
-<span class=post-date>May 7, 2022</span>
+<span class=post-date>June 28, 2023</span>
 </article>
 </div>
 </main><footer class=footer>
