--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/blog/mod-26/ class=post-link>picoCTF 2021: Mod 26</a>
+<div class=flex-break></div>
+<span class=post-date>June 28, 2023</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/blog/obedient-cat/ class=post-link>picoCTF 2021: Obedient Cat</a>
 <div class=flex-break></div>
 <span class=post-date>June 28, 2023</span>
