deploy: 01e9595b530674ba098d054d402a5e20da1fa55a

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/blog/utd-graduation/ class=post-link>University of Texas at Dallas CS修士卒業時の感想</a>
+<div class=flex-break></div>
+<span class=post-date>May 26, 2024</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/blog/picoctf2021-transformation/ class=post-link>picoCTF 2021: Transformation</a>
 <div class=flex-break></div>
 <span class=post-date>August 9, 2023</span>
@@ -108,14 +113,9 @@
 <div class=flex-break></div>
 <span class=post-date>July 7, 2023</span>
 </article>
-<article class=post-title>
-<a href=https://diohabara.github.io/blog/picoctf2021-wave-a-flag/ class=post-link>picoCTF 2021: Wave a Flag</a>
-<div class=flex-break></div>
-<span class=post-date>June 28, 2023</span>
-</article>
 </div>
 </main><footer class=footer>
-<span>&copy; 2023 </span>
+<span>&copy; 2024 </span>
 <span>
 Made with &#10084;&#65039; using <a target=_blank href=https://github.com/526avijitgupta/gokarna>Gokarna</a>
 </span>
