deploy: f22fee69741db6055e3ac1b46e8aa8f243bd2ba6

--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/blog/quit-gpif/ class=post-link>新卒で入って8ヶ月でGPIFやめますた</a>
+<div class=flex-break></div>
+<span class=post-date>February 4, 2025</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/blog/utd-ta/ class=post-link>UTDでのTA体験記</a>
 <div class=flex-break></div>
 <span class=post-date>May 26, 2024</span>
@@ -108,14 +113,9 @@
 <div class=flex-break></div>
 <span class=post-date>August 9, 2023</span>
 </article>
-<article class=post-title>
-<a href=https://diohabara.github.io/blog/picoctf2021-information/ class=post-link>picoCTF 2021: Information</a>
-<div class=flex-break></div>
-<span class=post-date>July 7, 2023</span>
-</article>
 </div>
 </main><footer class=footer>
-<span>&copy; 2024 </span>
+<span>&copy; 2025 </span>
 <span>
 Made with &#10084;&#65039; using <a target=_blank href=https://github.com/526avijitgupta/gokarna>Gokarna</a>
 </span>
