deploy: 981750af1aa730476fb7ceb111035adb9bdcdbd6

--- a/compensation/index.html
+++ b/compensation/index.html
@@ -2,21 +2,21 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <style>:root{--accent-color:#FF4D4D}</style>
-<title>review</title>
+<title>DIOHABARA's Compensation</title>
 <meta name=description content="MAKE THE WORLD FUN AGAIN">
 <meta name=keywords content="blog,diohabara,hugo">
-<meta property="og:url" content="https://diohabara.github.io/tags/review/">
+<meta property="og:url" content="https://diohabara.github.io/compensation/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="review">
+<meta property="og:title" content="DIOHABARA's Compensation">
 <meta property="og:description" content="MAKE THE WORLD FUN AGAIN">
 <meta property="og:image" content="/images/avatar.jpg">
 <meta name=twitter:card content="summary_large_image">
-<meta name=twitter:title content="review">
+<meta name=twitter:title content="DIOHABARA's Compensation">
 <meta name=twitter:description content="MAKE THE WORLD FUN AGAIN">
-<meta property="twitter:domain" content="https://diohabara.github.io/tags/review/">
-<meta property="twitter:url" content="https://diohabara.github.io/tags/review/">
+<meta property="twitter:domain" content="https://diohabara.github.io/compensation/">
+<meta property="twitter:url" content="https://diohabara.github.io/compensation/">
 <meta name=twitter:image content="/images/avatar.jpg">
-<link rel=canonical href=https://diohabara.github.io/tags/review/>
+<link rel=canonical href=https://diohabara.github.io/compensation/>
 <link rel=stylesheet type=text/css href=https://diohabara.github.io/css/normalize.min.css media=print onload="this.media='all'">
 <link rel=stylesheet type=text/css href=https://diohabara.github.io/css/main.css>
 <link disabled id=dark-theme rel=stylesheet href=https://diohabara.github.io/css/dark.css>
@@ -88,13 +88,44 @@
 </nav>
 </header>
 <main id=content>
-<div class="container list-posts">
-<h1 class=list-title>review</h2>
-<h2 class=posts-year>2023</h2><article class=post-title>
-<a href=https://diohabara.github.io/blog/review-2022.ja/ class=post-link>2022年ふりかえり</a>
-<div class=flex-break></div>
-<span class=post-date>January 1, 2023</span>
-</article>
+<div class="post container">
+<div class=post-header-section>
+<h1>DIOHABARA's Compensation</h1>
+<small role=doc-subtitle></small>
+<p class=post-date>
+January 1, 0001
+</p>
+<ul class=post-tags>
+</ul>
+</div>
+<div class=post-content>
+<p>
+<table>
+<thead>
+<tr>
+<th>Duration</th>
+<th>Total Compensation</th>
+<th>Extra Compensation</th>
+<th>Employer</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>2024/06~</td>
+<td>¥3,408,746</td>
+<td>¥0</td>
+<td>Government Pension Investment Fund (GPIF)</td>
+</tr>
+<tr>
+<td>2025/01~</td>
+<td>?</td>
+<td>¥0</td>
+<td>GPIF, Sony Interactive Entertainment (SIE)</td>
+</tr>
+</tbody>
+</table>
+</p>
+</div>
 </div>
 </main><footer class=footer>
 <span>&copy; 2025 </span>
@@ -107,13 +138,13 @@ Made with &#10084;&#65039; using <a target=_blank href=https://github.com/526avi
 <section class="section sns_parent">
 <div class="container sns_section">
 <div class="sns_button twitter">
-<a href="http://x.com/intent/tweet?url=https%3a%2f%2fdiohabara.github.io%2ftags%2freview%2f&text=review" target=_blank title=Tweet><i class="fab fa-twitter"></i></a>
+<a href="http://x.com/intent/tweet?url=https%3a%2f%2fdiohabara.github.io%2fcompensation%2f&text=DIOHABARA%27s%20Compensation" target=_blank title=Tweet><i class="fab fa-twitter"></i></a>
 </div>
 <div class="sns_button hatena">
-<a href="http://b.hatena.ne.jp/add?mode=confirm&url=https%3a%2f%2fdiohabara.github.io%2ftags%2freview%2f&title=review" target=_blank title=hatena><i class="fa fa-hatena"></i></i></a>
+<a href="http://b.hatena.ne.jp/add?mode=confirm&url=https%3a%2f%2fdiohabara.github.io%2fcompensation%2f&title=DIOHABARA%27s%20Compensation" target=_blank title=hatena><i class="fa fa-hatena"></i></i></a>
 </div>
 <div class="sns_button pocket">
-<a href="http://getpocket.com/edit?url=https%3a%2f%2fdiohabara.github.io%2ftags%2freview%2f&title=review" target=_blank title=pocket><i class="fab fa-get-pocket"></i></a>
+<a href="http://getpocket.com/edit?url=https%3a%2f%2fdiohabara.github.io%2fcompensation%2f&title=DIOHABARA%27s%20Compensation" target=_blank title=pocket><i class="fab fa-get-pocket"></i></a>
 </div>
 </div>
 </section>
