deploy: cf59ac77d70c33dffbcf932b02df33dcff6294f0

--- a/index.html
+++ b/index.html
@@ -100,6 +100,11 @@
 <div class="home-posts list-posts">
 <h2>Recent Posts</h2>
 <article class=post-title>
+<a href=https://diohabara.github.io/blog/kaishain-is-boring/ class=post-link>現在の年収をポイ活だけで得ようとしたらいくらあっても時間が足りないのでポイ活に最低賃金を設けろ</a>
+<div class=flex-break></div>
+<span class=post-date>July 10, 2025</span>
+</article>
+<article class=post-title>
 <a href=https://diohabara.github.io/blog/how-to-be-self-employed/ class=post-link>起業しました(個人事業主になっただけ)</a>
 <div class=flex-break></div>
 <span class=post-date>May 30, 2025</span>
@@ -111,11 +116,6 @@
 </article>
 <article class=post-title>
 <a href=https://diohabara.github.io/blog/utd-ta/ class=post-link>UTDでのTA体験記</a>
-<div class=flex-break></div>
-<span class=post-date>May 26, 2024</span>
-</article>
-<article class=post-title>
-<a href=https://diohabara.github.io/blog/utd-graduation/ class=post-link>University of Texas at Dallas CS修士卒業時の感想</a>
 <div class=flex-break></div>
 <span class=post-date>May 26, 2024</span>
 </article>
